volexc/tests/ui/check_undefined_type_map_key.out
Error: undefined type `UndefinedType`
   ╭─[check_undefined_type_map_key.vol:3:11]
   │
 3 │     bar: {UndefinedType:u32}
   │           ──────┬──────  
   │                 ╰──────── not found
───╯