volexc/tests/ui/check_undefined_type_map_key.vol
// Undefined type in map key
struct Foo {
    bar: {UndefinedType:u32};
}
